# Multiple-Disease-Prediction-System-ML-Project

./: README.md  pyproject.toml  requirements.txt
notebooks/: Diabetes_Prediction.ipynb  Heart_Prediction.ipynb  Thyroid_Prediction.ipynb
saved_models/: thyroid_model.sav
src/: multiple_disease_pred.py  streamlit_run_command.txt
