[project]
name = "multiple-disease-prediction"
version = "0.1.0"
description = """The **Multiple Disease Prediction System** is a web-based application that predicts the likelihood of **diabetes**, **heart disease**, and **thyroid cancer** using machine learning. Developed with **Python 3.13** and **Streamlit**, the system provides a clean and interactive interface for users to input medical data and receive real-time predictions powered by pre-trained models. The entire environment is managed using the `uv` tool for simplicity and reproducibility.
"""
readme = "README.md"
author = "Hamza Imtiaz"
email = "hamzaimtiaz8668@gmail.com"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "streamlit>=1.46.0",
    "streamlit-option-menu>=0.4.0",
    "tqdm>=4.67.1",
    "xgboost>=3.0.2",
]
